--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ subjects:
 - !lcsh 'Conduct of life -- Juvenile fiction'
 - !lcsh 'New York (N.Y.) -- Juvenile fiction'
 - !lcsh 'Christian life -- Juvenile fiction'
+- GITenberg
 title: Prudy Keeping House
 url: http://www.gutenberg.org/ebooks/20984
